--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,23 +1,13 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>FBEnd Boot System</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
- 
-</head>
-<body>
-	<h1>FBEnd Boot System v. 0.0.6a</h1>
-    <table class="table table-striped">
-		<tr>
-		    <th>Name</th>
-		</tr>  
-    	<tr th:each = "enquiry : ${enquiries}">
-    		<td th:text="${enquiry.name}"></td>
-    		<td><a th:href="@{/delete/{id}(id=${enquiry.id})}" class="btn btn-danger">Delete</a></td>
-    	</tr>
-    </table>
-    <a href="/add" class="btn btn-success">Add Enquiry</a>
-    
-</body>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+    <head>
+        <title>Spring Security Example</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
+    </head>
+    <body>
+        <h1>Heipparallaa!</h1>
+
+        <p>Paenappa <a th:href="@{/feedback}">tästä</a> ni päässöt kirrjautuu sissään!.</p>
+    </body>
 </html>
