--- a/src/main/resources/templates/addEnquiry.html
+++ b/src/main/resources/templates/addEnquiry.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta http-equiv="Content-Type" content="charset=UTF-8" />
-    <title>Formi Enquiry</title>
+    <title>FBEnd Boot System</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
  
 </head>
 <body>
