--- a/src/main/resources/templates/addQuestion.html
+++ b/src/main/resources/templates/addQuestion.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta http-equiv="Content-Type" content="charset=UTF-8" />
-<title>Insert title here</title>
+    <title>FBEnd Boot System</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
+ 
 </head>
 <body>
 
