--- a/src/main/resources/templates/feedback.html
+++ b/src/main/resources/templates/feedback.html
@@ -18,10 +18,8 @@
     	</tr>
     </table>
     <a href="/add" class="btn btn-success">Add Enquiry</a>
-    
-    <form th:action="@{/logout}" method="post">
-            <input type="submit" value="Sign Out"/>
-    </form>
+  
+ 	<a href="/adminSite">admin</a>
     
 </body>
 </html>
