--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,6 @@
     <body>
         <h1>Heipparallaa!</h1>
 
-        <p>Paenappa <a th:href="@{/feedback}">tästä</a> ni päässöt kirrjautuu sissään!.</p>
+        <p>Paenappa <a th:href="@{/feedback}">tästä</a> ni päässöt vastaillee kyshymykshiin!.</p>
     </body>
 </html>
