--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
     <body>
     	<h1>Sisäänkirjautuminen</h1>
         <div th:if="${param.error}">
-            Invalid username and password.
+            Invalid username or password.
         </div>
         <div th:if="${param.logout}">
             You have been logged out.
